# Remitwise-Contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml
benches/: bench_create_transfer.rs
docs/: audit-preparation.md  authorization.md  changelog-policy.md  cli-usage.md  code-style.md  contributing-guide.md  data-types.md  deployment-guide.md  edge-cases.md  entrypoint-reference.md  error-reference.md  event-reference.md  examples-advanced.md  examples-basic.md  frontend-integration.md  gas-and-fees.md  governance.md  initialization.md  integration-tests.md  invariants.md  known-limitations.md  mainnet-checklist.md  migration-guide.md  observability.md  overview.md  performance-notes.md  post-deploy-verification.md  property-tests.md  replay-protection.md  reproducible-build.md  resource-limits.md  roadmap.md  sdk-integration.md  security-considerations.md  state-transitions.md  storage-model.md  testing-guide.md  testnet-deployment.md  threat-model.md  troubleshooting.md  (+2 more)
docs/adr/: 0001-use-soroban-sdk-21-x.md  0004-separate-instance-and-persistent-storage.md  0005-define-a-ttl-bump-strategy-for-persistent-entries.md  0006-model-errors-with-a-contracterror-enum.md  0008-require-auth-on-all-state-changing-entrypoints.md  (+24 more)
scripts/: check-wasm-size.sh  deploy-and-initialize.sh  diff-wasm.sh  smoke-test.sh  test-check-wasm-size.sh  verify-wasm-hash.sh
src/: constants.rs  error.rs  events.rs  lib.rs  math.rs  normalize.rs  storage.rs  test.rs  test_utils.rs  types.rs
(+107 files in other folders)
