[package]
name = "remitflow-contract"
version = "0.1.0"
edition = "2021"
authors = ["jagadeesh <baskarayelu@gmail.com>"]
description = "RemitFlow: a cross-border remittance escrow smart contract for Soroban/Stellar"
license = "MIT"
repository = ""
readme = "README.md"

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "=21.7.6"

[dev-dependencies]
soroban-sdk = { version = "=21.7.6", features = ["testutils"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[bench]]
name = "create_transfer"
path = "benches/bench_create_transfer.rs"
harness = false

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
